--- a/index.HTML
+++ b/index.HTML
@@ -101,7 +101,7 @@
 <body class="bg-gray-100 dark:bg-gray-900 p-8 flex items-center justify-center min-h-screen transition-all duration-300">
     <div class="bg-white dark:bg-gray-800 p-6 rounded-3xl shadow-2xl w-full max-w-2xl transform transition-all duration-500">
         <div class="flex items-center justify-between mb-6">
-            <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100">Ứng dụng Quản lý Sản phẩm</h1>
+            <h1 class="text-3xl font-bold text-gray-800 dark:text-gray-100"></h1>
             <button id="toggle-dark-mode" class="p-2 rounded-full bg-gray-200 dark:bg-gray-700 text-gray-800 dark:text-gray-200 transition-colors duration-300">
                 <svg id="sun-icon" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" viewBox="0 0 24 24" fill="currentColor">
                     <path d="M12 2.25a.75.75 0 01.75.75v2.25a.75.75 0 01-1.5 0V3a.75.75 0 01.75-.75zM7.5 12a4.5 4.5 0 119 0 4.5 4.5 0 01-9 0zM18.847 8.621a.75.75 0 00-1.06-1.06l-1.591 1.59a.75.75 0 101.06 1.06l1.59-1.591zM21.75 12a.75.75 0 01-.75.75h-2.25a.75.75 0 010-1.5H21a.75.75 0 01.75.75zM17.389 18.847a.75.75 0 00-1.06-1.06l-1.59 1.59a.75.75 0 01-1.06 1.06l-1.591-1.59a.75.75 0 00-1.06 1.06l1.59 1.591a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.06 1.06zM6.75 12a.75.75 0 00-.75-.75H3a.75.75 0 000 1.5h2.25a.75.75 0 00.75-.75zM4.621 17.389a.75.75 0 00-1.06-1.06l-1.59 1.59a.75.75 0 101.06 1.06l1.59-1.59zM12 18.75a.75.75 0 00-.75.75v2.25a.75.75 0 001.5 0V19.5a.75.75 0 00-.75-.75zM6.75 12a.75.75 0 00-.75-.75H3a.75.75 0 000 1.5h2.25a.75.75 0 00.75-.75zM17.389 18.847a.75.75 0 00-1.06-1.06l-1.59 1.59a.75.75 0 01-1.06 1.06l-1.591-1.59a.75.75 0 00-1.06 1.06l1.59 1.591a.75.75 0 001.06-1.06l-1.59-1.591a.75.75 0 00-1.06 1.06zM6.75 12a.75.75 0 00-.75-.75H3a.75.75 0 000 1.5h2.25a.75.75 0 00.75-.75zM4.621 17.389a.75.75 0 00-1.06-1.06l-1.59 1.59a.75.75 0 101.06 1.06l1.59-1.59zM12 18.75a.75.75 0 00-.75.75v2.25a.75.75 0 001.5 0V19.5a.75.75 0 00-.75-.75zM6.75 12a.75.75 0 00-.75-.75H3a.75.75 0 000 1.5h2.25a.75.75 0 00.75-.75z" />
@@ -1253,3 +1253,4 @@
     </script>
 </body>
 </html>
+
